<resources>
    <string name="app_name">MAV LIB</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">"Login"</string>
    <string name="forgot_password">"forgot password ?"</string>
    <string name="new_user">"new user"</string>
    <string name="confirm_password">"Confirm Password"</string>
    <string name="first_name">"First Name"</string>
    <string name="last_name">"Last Name"</string>
    <string name="register">"Register"</string>
    <string name="student_id">"Student ID"</string>
    <string name="title_activity_student">student</string>
    <string name="student">Student</string>
    <string name="checkout_books">Checkout Books</string>
    <string name="search_books">Search Books</string>
    <string name="view_reserved_or_checked_out_books">View Reserved/Checkedout Books</string>
    <string name="about">About</string>
    <string name="student_menu">Student Menu</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="manage_books">Manage Books</string>
    <string name="librarian_menu">Librarian Menu</string>
    <string name="checkin_books">Checkin Books</string>
    <string name="add_books">Add Books</string>
    <string name="remove_books">Remove Books</string>
</resources>
