<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LibrarianMenu">


        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:minHeight="?actionBarSize"
            android:padding="@dimen/appbar_padding"
            android:text="@string/librarian_menu"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
            app:layout_constraintBottom_toTopOf="@+id/search_books_librarian_menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/search_books_librarian_menu"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:clickable="true"
            android:elevation="5dp"
            android:text="@string/search_books"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/view_reserved_or_checked_out_books_librarian_menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            tools:visibility="visible" />

        <Button
            android:id="@+id/view_reserved_or_checked_out_books_librarian_menu"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:clickable="true"
            android:elevation="5dp"
            android:text="@string/checkout_books"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/manage_books_librarian_menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_books_librarian_menu"
            tools:visibility="visible" />

    <Button
        android:id="@+id/manage_books_librarian_menu"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:clickable="true"
        android:elevation="5dp"
        android:text="@string/manage_books"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/checkin_books"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_reserved_or_checked_out_books_librarian_menu" />

    <Button
        android:id="@+id/checkin_books"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:clickable="true"
        android:elevation="5dp"
        android:text="@string/checkin_books"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/about"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manage_books_librarian_menu" />

    <Button
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:clickable="true"
        android:elevation="5dp"
        android:text="@string/about"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkin_books" />

</androidx.constraintlayout.widget.ConstraintLayout>
